# mycore

./: .envrc  .gitignore  Justfile  README.org  cabal.project  flake.nix  repl.nix
mycore-docs-server/: mycore-docs-server.cabal
mycore-docs-server/src/Mycore/Docs/: Server.hs
nix/configurations/nixos/: mycore-evaluation.nix
nix/lib/: default.nix  nix-files.nix
nix/modules/common/: mydefaults.nix
nix/modules/flake/: autowire.nix  defaults.nix  devshells.nix  lib.nix
nix/modules/flake/devShells/: default.nix  devShell.nix  elm.nix  env.nix  go.nix  haskell.nix  javascript.nix  just.nix  packages.nix  pre-commit.nix  python.nix
nix/modules/flake/docs/: default.nix  doc.nix  moduleOptions.nix  section.nix
nix/modules/flake/languages/: default.nix  elm.nix  go.nix  haskell.nix  javascript.nix  just.nix  python.nix
nix/modules/nixos/evaluation/: default.nix
nix/templates/default/: .envrc  .gitignore  Justfile  README.org  flake.nix
